# ai-audio-toolkit

./: .gitignore  README.md  audio_editor.spec  build_bundle.py  build_freeze.py  build_pyinstaller.py  pyproject.toml  requirements-cpu.txt  requirements-lock.txt  requirements.txt  run.py  setup_env.py
.github/workflows/: build-windows.yml
audio_editor/: __init__.py  analysis.py  audio_engine.py  branding.py  diagnostics.py  effects.py  effects_panel.py  effects_preview.py  enhance_backend.py  log_viewer.py  main.py  main_window.py  media_utils.py  runtime.py  sam_backend.py  selftest.py  separator_backend.py  settings.py  settings_dialog.py  split_dialog.py  stem_track_widget.py  transport_bar.py  visual_prompter.py  waveform_widget.py
rthooks/: rthook_setup.py
scripts/: generate_app_icon.py  generate_readme_graphics.py  windows_launcher.py
